[UPDATE] added stlyes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxus Clothing</title>
+    <title>Luxus Clothing | Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Cormorant+Upright&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
-    <script src="./js/script.js"></script>
+    <div class="navbar">
+        <div class="navbar-content">
+            <button class="menu-toggle" aria-label="Toggle navigation">&#9776;</button>
+            <a href="./index.html"><img src="./assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
+            <div class="nav-links">
+                <a href="./pages/men.html">Men's</a>
+                <a href="./pages/women.html">Women's</a>
+                <a href="./pages/signature.html">Signature</a>
+            </div>
+        </div>
+    </div>
+
+    <section class="hero-main">
+        <div class="hero-text">
+            <h1>Luxus Clothing</h1>
+            <p>Wear good Feel good</p>
+        </div>
+    </section>
+    <section class="signature">
+        <h2>A SIGNATURE COLLECTION</h2>
+        <a href="./pages/signature.html"><img src="./assets/signature-womens-shoes.png" alt="Signature Womens Shoes"></a>
+        <p>Women's Shoes</p>
+        <a href="./pages/signature.html"><img src="./assets/signature-womens-bags.png" alt="Signature Womens Bags"></a>
+        <p>Women's Bags</p>
+        <a href="./pages/signature.html"><img src="./assets/signature-mens-bags.png" alt="Signature Mens Bags"></a>
+        <p>Men's Bags</p>
+        <a href="./pages/signature.html"><img src="./assets/signature-womens-shoes.png" alt="Signature Mens Shoes"></a>
+        <p>Men's Shoes</p>
+    </section>
+        <div class="womens-collection">
+            <a href="./pages/women.html"><img src="./assets/womens-collection.png" alt="Womens Collection">
+            </a>
+            <h2>WOMEN'S COLLECTION</h2>
+        </div>
+        <div class="mens-collection">
+            <img src="./assets/mens-collection.png" alt="Mens Collection">
+            <h2>MEN'S COLLECTION</h2>
+        </div>
+    <footer>
+        <div class="footer">
+            <div class="footer-container">
+                <div class="footer-section">
+                    <h4>Contact Us</h4>
+                    <p>Email: info@luxus.com</p>
+                    <p>Phone: (123) 456-7890</p>
+                    <p>Address: 123 Luxury St, Clothing City</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Follow Us</h4>
+                    <a href="https://www.facebook.com" target="_blank"><img src="./assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
+                    <a href="https://www.instagram.com" target="_blank"><img src="./assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
+                    <a href="https://www.twitter.com" target="_blank"><img src="./assets/X.png" alt="X" class="social-icon small-social"></a>
+                </div>
+                <div class="footer-section">
+                    <h4>Quick Links</h4>
+                    <p><a href="./index.html">Home</a> | <a href="./pages/contact.html">Contact</a> | <a href="./pages/history.html">About Us</a></p>
+                </div>
+            </div>
+            <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
+        </div>
+    </footer>
+        <script src="./js/script.js"></script>
 </body>
 </html>
