[UPDATE] added stlyes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <div class="navbar">
-        <div class="navbar-content">
-            <button class="menu-toggle" aria-label="Toggle navigation">&#9776;</button>
+    <div class="header">
+        <div class="header-content">
             <a href="./index.html"><img src="./assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
             <div class="nav-links">
                 <a href="./pages/men.html">Men's</a>
@@ -38,15 +37,18 @@
         <a href="./pages/signature.html"><img src="./assets/signature-womens-shoes.png" alt="Signature Mens Shoes"></a>
         <p>Men's Shoes</p>
     </section>
-        <div class="womens-collection">
-            <a href="./pages/women.html"><img src="./assets/womens-collection.png" alt="Womens Collection">
-            </a>
-            <h2>WOMEN'S COLLECTION</h2>
-        </div>
-        <div class="mens-collection">
-            <img src="./assets/mens-collection.png" alt="Mens Collection">
-            <h2>MEN'S COLLECTION</h2>
-        </div>
+    <div class="womens-collection collection-item">
+        <a href="./pages/women.html" class="collection-link">
+            <img src="./assets/womens-collection.png" alt="Women's Collection">
+            <h2>Women's Collection</h2>
+        </a>
+    </div>
+    <div class="mens-collection collection-item">
+        <a href="./pages/men.html" class="collection-link">
+            <img src="./assets/mens-collection.png" alt="Men's Collection">
+            <h2>Men's Collection</h2>
+        </a>
+    </div>
     <footer>
         <div class="footer">
             <div class="footer-container">
