--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="header">
         <div class="header-content">
             <a href="./index.html"><img src="./assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
-            <div class="nav-links">
+            <div class="header-links">
                 <a href="./pages/men.html">Men's</a>
                 <a href="./pages/women.html">Women's</a>
                 <a href="./pages/signature.html">Signature</a>
             </div>
-        </div>
+        </div>        
     </div>
 
     <section class="hero-main">
@@ -28,14 +28,24 @@
     </section>
     <section class="signature">
         <h2>A SIGNATURE COLLECTION</h2>
-        <a href="./pages/signature.html"><img src="./assets/signature-womens-shoes.png" alt="Signature Womens Shoes"></a>
-        <p>Women's Shoes</p>
-        <a href="./pages/signature.html"><img src="./assets/signature-womens-bags.png" alt="Signature Womens Bags"></a>
-        <p>Women's Bags</p>
-        <a href="./pages/signature.html"><img src="./assets/signature-mens-bags.png" alt="Signature Mens Bags"></a>
-        <p>Men's Bags</p>
-        <a href="./pages/signature.html"><img src="./assets/signature-womens-shoes.png" alt="Signature Mens Shoes"></a>
-        <p>Men's Shoes</p>
+        <div class="signature-grid">
+            <div class="signature-item">
+                <a href="./pages/signature.html"><img src="./assets/signature-womens-shoes.jpg" alt="Signature Women's Shoes"></a>
+                <p>Women's Shoes</p>
+            </div>
+            <div class="signature-item">
+                <a href="./pages/signature.html"><img src="./assets/signature-womens-bags.jpg" alt="Signature Women's Bags"></a>
+                <p>Women's Bags</p>
+            </div>
+            <div class="signature-item">
+                <a href="./pages/signature.html"><img src="./assets/signature-mens-bags.jpg" alt="Signature Men's Bags"></a>
+                <p>Men's Bags</p>
+            </div>
+            <div class="signature-item">
+                <a href="./pages/signature.html"><img src="./assets/signature-mens-shoes.jpg" alt="Signature Men's Shoes"></a>
+                <p>Men's Shoes</p>
+            </div>
+        </div>
     </section>
     <div class="womens-collection collection-item">
         <a href="./pages/women.html" class="collection-link">
