[UPDATE] Added pages, styles and responsive

--- a/pages/history.html
+++ b/pages/history.html
@@ -1,47 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History | Luxus</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Cormorant+Upright&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luxus Clothing | Our History</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Cormorant+Upright&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
 </head>
 <body>
-    <div class="header">
-        <div class="header-content">
-            <a href="../index.html"><img src="../assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
-            <div class="header-links">
-                <a href="../pages/men.html">Men's</a>
-                <a href="../pages/women.html">Women's</a>
-                <a href="../pages/signature.html">Signature</a>
-            </div>
-        </div>        
+  <div class="header">
+    <div class="header-content">
+      <a href="../index.html"><img src="../assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
+      <div class="header-links">
+        <a href="./men.html">Men's</a>
+        <a href="./women.html">Women's</a>
+        <a href="./signature.html">Signature</a>
+      </div>
     </div>
-    <footer>
-        <div class="footer">
-            <div class="footer-container">
-                <div class="footer-section">
-                    <h4>Contact Us</h4>
-                    <p>Email: info@luxus.com</p>
-                    <p>Phone: (123) 456-7890</p>
-                    <p>Address: 123 Luxury St, Clothing City</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Follow Us</h4>
-                    <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
-                    <a href="https://www.instagram.com" target="_blank"><img src="../assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
-                    <a href="https://www.twitter.com" target="_blank"><img src="../assets/X.png" alt="X" class="social-icon small-social"></a>
-                </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <p><a href="../index.html">Home</a> | <a href="./contact.html">Contact</a> | <a href="./history.html">About Us</a></p>
-                </div>
-            </div>
-            <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
+  </div>
+
+  <section class="hero-history">
+    <h1>Our Story</h1>
+  </section>
+
+  <section class="history-content">
+    <div class="history-text">
+      <h2>Born from Passion</h2>
+      <p>Luxus Clothing was founded with a single vision: to blend timeless elegance with modern sophistication. Since our humble beginnings, we have been committed to crafting clothing that speaks to those who appreciate the finer things in life.</p>
+
+      <h2>Craftsmanship and Innovation</h2>
+      <p>Each piece is designed with meticulous attention to detail, using the finest materials sourced from around the world. We believe luxury is not just a label — it's an experience.</p>
+
+      <h2>A Future of Style</h2>
+      <p>As we continue to grow, our dedication to excellence remains unwavering. Luxus is not just fashion; it's a lifestyle built for those who demand the extraordinary.</p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer">
+      <div class="footer-container">
+        <div class="footer-section">
+          <h4>Contact Us</h4>
+          <p>Email: info@luxus.com</p>
+          <p>Phone: (123) 456-7890</p>
+          <p>Address: 123 Luxury St, Clothing City</p>
         </div>
-    </footer>
-        <script src="../js/script.js"></script>
+        <div class="footer-section">
+          <h4>Follow Us</h4>
+          <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
+          <a href="https://www.instagram.com" target="_blank"><img src="../assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
+          <a href="https://www.twitter.com" target="_blank"><img src="../assets/X.png" alt="X" class="social-icon small-social"></a>
+        </div>
+        <div class="footer-section">
+          <h4>Quick Links</h4>
+          <p><a href="../index.html">Home</a> | <a href="./contact.html">Contact</a> | <a href="./history.html">About Us</a></p>
+        </div>
+      </div>
+      <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
+    </div>
+  </footer>
+
+  <script src="../js/script.js"></script>
 </body>
 </html>
