--- a/pages/signature.html
+++ b/pages/signature.html
@@ -3,22 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signature | Luxus</title>
+    <title>Luxus Clothing | Signature Collection</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Cormorant+Upright&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="header">
         <div class="header-content">
             <a href="../index.html"><img src="../assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
             <div class="header-links">
-                <a href="../pages/men.html">Men's</a>
-                <a href="../pages/women.html">Women's</a>
-                <a href="../pages/signature.html">Signature</a>
+                <a href="./men.html">Men's</a>
+                <a href="./women.html">Women's</a>
+                <a href="./signature.html">Signature</a>
             </div>
-        </div>        
+        </div>
     </div>
+
+    <section class="hero-signature">
+        <h1>Signature Collection</h1>
+    </section>
+
+    <section class="signature">
+        <h2>A SIGNATURE COLLECTION</h2>
+        <div class="signature-grid">
+            <div class="signature-item">
+                <a href="./pages/signature.html"><img src="../assets/signature-womens-shoes.jpg" alt="Signature Women's Shoes"></a>
+                <p>Women's Shoes</p>
+            </div>
+            <div class="signature-item">
+                <a href="./pages/signature.html"><img src="../assets/signature-womens-bags.jpg" alt="Signature Women's Bags"></a>
+                <p>Women's Bags</p>
+            </div>
+            <div class="signature-item">
+                <a href="./pages/signature.html"><img src="../assets/signature-mens-bags.jpg" alt="Signature Men's Bags"></a>
+                <p>Men's Bags</p>
+            </div>
+            <div class="signature-item">
+                <a href="./pages/signature.html"><img src="../assets/signature-mens-shoes.jpg" alt="Signature Men's Shoes"></a>
+                <p>Men's Shoes</p>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="footer">
             <div class="footer-container">
@@ -42,6 +69,7 @@
             <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
         </div>
     </footer>
-        <script src="../js/script.js"></script>
+
+    <script src="../js/script.js"></script>
 </body>
 </html>
