--- a/pages/women.html
+++ b/pages/women.html
@@ -3,22 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Women | Luxus</title>
+    <title>Luxus Clothing | Women's Collection</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Cormorant+Upright&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="header">
         <div class="header-content">
             <a href="../index.html"><img src="../assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
             <div class="header-links">
-                <a href="../pages/men.html">Men's</a>
-                <a href="../pages/women.html">Women's</a>
-                <a href="../pages/signature.html">Signature</a>
+                <a href="./men.html">Men's</a>
+                <a href="./women.html">Women's</a>
+                <a href="./signature.html">Signature</a>
             </div>
-        </div>        
+        </div>
     </div>
+
+    <section class="hero-women">
+        <h1>Women's Collection</h1>
+    </section>
+
+    <section class="women-highlights">
+        <div class="highlight-item">
+            <img src="../assets/womens-shoes.jpg" alt="Women's Shoes">
+            <p>Women's Shoes</p>
+        </div>
+        <div class="highlight-item">
+            <img src="../assets/womens-bags.jpg" alt="Women's Bags">
+            <p>Women's Bags</p>
+        </div>
+        <div class="highlight-item">
+            <img src="../assets/womens-accessories.jpg" alt="Women's Accessories">
+            <p>Accessories</p>
+        </div>
+        <!-- Puedes agregar más highlights si quieres -->
+    </section>
+
     <footer>
         <div class="footer">
             <div class="footer-container">
@@ -42,6 +63,7 @@
             <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
         </div>
     </footer>
-        <script src="../js/script.js"></script>
+
+    <script src="../js/script.js"></script>
 </body>
 </html>
