--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,47 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Luxus</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Cormorant+Upright&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luxus Clothing | Contact</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Cormorant+Upright&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
 </head>
 <body>
-    <div class="header">
-        <div class="header-content">
-            <a href="../index.html"><img src="../assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
-            <div class="header-links">
-                <a href="../pages/men.html">Men's</a>
-                <a href="../pages/women.html">Women's</a>
-                <a href="../pages/signature.html">Signature</a>
-            </div>
-        </div>        
+  <div class="header">
+    <div class="header-content">
+      <a href="../index.html"><img src="../assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
+      <div class="header-links">
+        <a href="./men.html">Men's</a>
+        <a href="./women.html">Women's</a>
+        <a href="./signature.html">Signature</a>
+      </div>
     </div>
-    <footer>
-        <div class="footer">
-            <div class="footer-container">
-                <div class="footer-section">
-                    <h4>Contact Us</h4>
-                    <p>Email: info@luxus.com</p>
-                    <p>Phone: (123) 456-7890</p>
-                    <p>Address: 123 Luxury St, Clothing City</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Follow Us</h4>
-                    <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
-                    <a href="https://www.instagram.com" target="_blank"><img src="../assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
-                    <a href="https://www.twitter.com" target="_blank"><img src="../assets/X.png" alt="X" class="social-icon small-social"></a>
-                </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <p><a href="../index.html">Home</a> | <a href="./contact.html">Contact</a> | <a href="./history.html">About Us</a></p>
-                </div>
-            </div>
-            <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
+  </div>
+
+  <section class="contact-hero">
+    <h1>Contact Us</h1>
+  </section>
+
+  <section class="contact-form">
+    <div class="contact-info">
+      <h2>Get in Touch</h2>
+      <p>Have a question or want to learn more about Luxus? Fill out the form below or reach out to us through our social media.</p>
+    </div>
+    <form action="#" method="POST" class="form">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Your name" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="Your email" required>
+      </div>
+      <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" placeholder="Your message" required></textarea>
+      </div>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <footer>
+    <div class="footer">
+      <div class="footer-container">
+        <div class="footer-section">
+          <h4>Contact Us</h4>
+          <p>Email: info@luxus.com</p>
+          <p>Phone: (123) 456-7890</p>
+          <p>Address: 123 Luxury St, Clothing City</p>
         </div>
-    </footer>
-        <script src="../js/script.js"></script>
+        <div class="footer-section">
+          <h4>Follow Us</h4>
+          <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
+          <a href="https://www.instagram.com" target="_blank"><img src="../assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
+          <a href="https://www.twitter.com" target="_blank"><img src="../assets/X.png" alt="X" class="social-icon small-social"></a>
+        </div>
+        <div class="footer-section">
+          <h4>Quick Links</h4>
+          <p><a href="../index.html">Home</a> | <a href="./contact.html">Contact</a> | <a href="./history.html">About Us</a></p>
+        </div>
+      </div>
+      <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
+    </div>
+  </footer>
+
+  <script src="../js/script.js"></script>
 </body>
 </html>
