[UPDATE] Compressed images for better optimization

--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
         <h2>A SIGNATURE COLLECTION</h2>
         <div class="signature-grid">
             <div class="signature-item">
-                <a href="./pages/signature.html"><img src="./assets/signature-womens-shoes.jpg" alt="Signature Women's Shoes"></a>
+                <a href="./pages/signature.html"><img src="./assets/signature-womens-shoes.jpeg" alt="Signature Women's Shoes"></a>
                 <p>Women's Shoes</p>
             </div>
             <div class="signature-item">
-                <a href="./pages/signature.html"><img src="./assets/signature-womens-bags.jpg" alt="Signature Women's Bags"></a>
+                <a href="./pages/signature.html"><img src="./assets/signature-womens-bags.jpeg" alt="Signature Women's Bags"></a>
                 <p>Women's Bags</p>
             </div>
             <div class="signature-item">
-                <a href="./pages/signature.html"><img src="./assets/signature-mens-bags.jpg" alt="Signature Men's Bags"></a>
+                <a href="./pages/signature.html"><img src="./assets/signature-mens-bags.jpeg" alt="Signature Men's Bags"></a>
                 <p>Men's Bags</p>
             </div>
             <div class="signature-item">
-                <a href="./pages/signature.html"><img src="./assets/signature-mens-shoes.jpg" alt="Signature Men's Shoes"></a>
+                <a href="./pages/signature.html"><img src="./assets/signature-mens-shoes.jpeg" alt="Signature Men's Shoes"></a>
                 <p>Men's Shoes</p>
             </div>
         </div>
     </section>
     <div class="womens-collection collection-item">
         <a href="./pages/women.html" class="collection-link">
-            <img src="./assets/womens-collection.png" alt="Women's Collection">
+            <img src="./assets/womens-collection.jpeg" alt="Women's Collection">
             <h2>Women's Collection</h2>
         </a>
     </div>
     <div class="mens-collection collection-item">
         <a href="./pages/men.html" class="collection-link">
-            <img src="./assets/mens-collection.png" alt="Men's Collection">
+            <img src="./assets/mens-collection.jpeg" alt="Men's Collection">
             <h2>Men's Collection</h2>
         </a>
     </div>
