[UPDATE] Compressed images for better optimization

--- a/pages/signature.html
+++ b/pages/signature.html
@@ -28,19 +28,19 @@
         <h2>A SIGNATURE COLLECTION</h2>
         <div class="signature-grid">
             <div class="signature-item">
-                <a href="../pages/signature.html"><img src="../assets/signature-womens-shoes.jpeg" alt="Signature Women's Shoes"></a>
+                <a href="../pages/signature.html"><img src="../assets/signature-womens-shoes.jpg" alt="Signature Women's Shoes"></a>
                 <p>Women's Shoes</p>
             </div>
             <div class="signature-item">
-                <a href="../pages/signature.html"><img src="../assets/signature-womens-bags.jpeg" alt="Signature Women's Bags"></a>
+                <a href="../pages/signature.html"><img src="../assets/signature-womens-bags.jpg" alt="Signature Women's Bags"></a>
                 <p>Women's Bags</p>
             </div>
             <div class="signature-item">
-                <a href="../pages/signature.html"><img src="../assets/signature-mens-bags.jpeg" alt="Signature Men's Bags"></a>
+                <a href="../pages/signature.html"><img src="../assets/signature-mens-bags.jpg" alt="Signature Men's Bags"></a>
                 <p>Men's Bags</p>
             </div>
             <div class="signature-item">
-                <a href="../pages/signature.html"><img src="../assets/signature-mens-shoes.jpeg" alt="Signature Men's Shoes"></a>
+                <a href="../pages/signature.html"><img src="../assets/signature-mens-shoes.jpg" alt="Signature Men's Shoes"></a>
                 <p>Men's Shoes</p>
             </div>
         </div>
