--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Luxus Clothing | Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Cormorant+Upright&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -82,6 +83,7 @@
             <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
         </div>
     </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
         <script src="./js/script.js"></script>
 </body>
 </html>
