--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luxus Clothing | Contact</title>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant&family=Cormorant+Upright&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
 </head>
@@ -69,7 +70,7 @@
       <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
     </div>
   </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../js/script.js"></script>
 </body>
 </html>
