--- a/pages/men.html
+++ b/pages/men.html
@@ -27,16 +27,44 @@
 
     <section class="men-highlights">
         <div class="highlight-item">
-            <img src="../assets/mens-shoes.jpg" alt="Men's Shoes">
-            <p>Men's Shoes</p>
+            <img src="../assets/mens/Light-Chaqueta-piel.avif" alt="Leather Jacket">
+            <p>Leather Jacket</p>
         </div>
         <div class="highlight-item">
-            <img src="../assets/mens-bags.jpg" alt="Men's Bags">
-            <p>Men's Bags</p>
+            <img src="../assets/mens/Light-Gafas-de-sol.avif" alt="Squared Sunglasses">
+            <p>Squared Sunglasses</p>
         </div>
         <div class="highlight-item">
-            <img src="../assets/mens-accessories.jpg" alt="Men's Accessories">
-            <p>Accessories</p>
+            <img src="../assets/mens/Light-Mocasn-hombre.avif" alt="Mocasin">
+            <p>Mocasin</p>
+        </div>
+        <div class="highlight-item">
+            <img src="../assets/mens/Light-Pantalon-denim.avif" alt="Denim Jeans">
+            <p>Denim Jeans</p>
+        </div>
+        <div class="highlight-item">
+            <img src="../assets/mens/traje-marron.avif" alt="brown suit">
+            <p>Brown Suit</p>
+        </div>
+        <div class="highlight-item">
+            <img src="../assets/mens/smokin.avif" alt="smokin">
+            <p>Black Smokin</p>
+        </div>
+        <div class="highlight-item">
+            <img src="../assets/mens/beige-blazer.avif" alt="Beige Blazer">
+            <p>Beige Blazer</p>
+        </div>
+        <div class="highlight-item">
+            <img src="../assets/mens/green-scarf.avif" alt="Green Scarf">
+            <p>Green Scarf</p>
+        </div>
+        <div class="highlight-item">
+            <img src="../assets/mens/oasi-lino-shirt.avif" alt="Lino Shirt">
+            <p>Lino Shirt</p>
+        </div>
+        <div class="highlight-item">
+            <img src="../assets/mens/ochre-polo.avif" alt="Ochre Polo">
+            <p>Ochre Polo</p>
         </div>
         <!-- Agrega más items si quieres -->
     </section>
