[update] added icons and shopping cart

--- a/pages/men.html
+++ b/pages/men.html
@@ -29,9 +29,7 @@
               <span id="cart-count">0</span>
               <div id="cart-dropdown" class="cart-dropdown hidden">
                 <p class="cart-title">Your Cart</p>
-                <ul id="cart-items-list">
-                  </ul>
-                  
+                <ul id="cart-items-list"></ul>
               </div>
             </div>
           </div>
