--- a/index.html
+++ b/index.html
@@ -8,19 +8,33 @@
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="header">
         <div class="header-content">
-            <a href="./index.html"><img src="./assets/logo.png" alt="Luxus Clothing Logo" class="logo"></a>
-            <div class="header-links">
-                <a href="./pages/men.html">Men's</a>
-                <a href="./pages/women.html">Women's</a>
-                <a href="./pages/signature.html">Signature</a>
+          <a href="../index.html">
+            <img src="../assets/logo.png" alt="Luxus Clothing Logo" class="logo">
+          </a>
+          <div class="header-links">
+            <a href="./pages/men.html">Men's</a>
+            <a href="./pages/women.html">Women's</a>
+            <a href="./pages/signature.html">Signature</a>
+          </div>
+          <div class="header-icons">
+            <i class="fas fa-search"></i>
+            <i class="fas fa-user"></i>
+            <div class="cart-icon-container">
+              <i class="fas fa-shopping-cart" id="cartIcon"></i>
+              <span id="cart-count">0</span>
+              <div id="cart-dropdown" class="cart-dropdown hidden">
+                <p class="cart-title">Your Cart</p>
+                <ul id="cart-items-list"></ul>
+              </div>
             </div>
-        </div>        
-    </div>
-
+          </div>
+        </div>
+      </div>
     <section class="hero-main">
         <div class="hero-text">
             <h1>Luxus Clothing</h1>
