[UPDATE] fixed contact form and fixed cart quantities and total

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,7 +44,7 @@
       <h2>Get in Touch</h2>
       <p>Have a question or want to learn more about Luxus? Fill out the form below or reach out to us through our social media.</p>
     </div>
-    <form action="#" method="POST" class="form">
+    <form id="contactForm" class="form">
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="Your name" required>
