--- a/pages/women.html
+++ b/pages/women.html
@@ -30,6 +30,12 @@
               <div id="cart-dropdown" class="cart-dropdown hidden">
                 <p class="cart-title">Your Cart</p>
                 <ul id="cart-items-list"></ul>
+              
+                <!-- TOTAL DEL CARRITO -->
+                <div class="cart-total-container">
+                  Total: <span id="cart-total">$0.00</span>
+                </div>
+              </div>   
               </div>
             </div>
           </div>
