[UPDATE] fixed contact form and fixed cart quantities and total

--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
     <footer>
         <div class="footer">
             <div class="footer-container">
-                <div class="footer-section">
-                    <h4>Contact Us</h4>
-                    <p>Email: info@luxus.com</p>
-                    <p>Phone: (123) 456-7890</p>
-                    <p>Address: 123 Luxury St, Clothing City</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Follow Us</h4>
-                    <a href="https://www.facebook.com" target="_blank"><img src="./assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
-                    <a href="https://www.instagram.com" target="_blank"><img src="./assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
-                    <a href="https://www.twitter.com" target="_blank"><img src="./assets/X.png" alt="X" class="social-icon small-social"></a>
-                </div>
+              <div class="footer-section">
+                <h4>Follow Us</h4>
+                <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="../assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="../assets/X.png" alt="X" class="social-icon small-social"></a>
+              </div>
+              <div class="footer-section">
+                  <h4>Contact Us</h4>
+                  <p>Email: info@luxus.com</p>
+                  <p>Phone: (123) 456-7890</p>
+                  <p>Address: 123 Luxury St, Clothing City</p>
+              </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
-                    <p><a href="./index.html">Home</a> | <a href="./pages/contact.html">Contact</a> | <a href="./pages/history.html">About Us</a></p>
+                    <p><a href="../index.html">Home</a> | <a href="./pages/contact.html">Contact</a> | <a href="./pages/history.html">About Us</a></p>
                 </div>
             </div>
             <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
