--- a/pages/women.html
+++ b/pages/women.html
@@ -47,71 +47,71 @@
 
     <section class="women-highlights">
         <div class="highlight-item" data-id="11">
-            <img src="../assets/mens/Light-Chaqueta-piel.avif" alt="Leather Jacket">
-            <p>Leather Jacket</p>
+            <img src="../assets/womens/vestido-de-punto-Cropped view.avif" alt="Knit Dress">
+            <p>Knit Dress</p>
         </div>
         <div class="highlight-item" data-id="12">
-            <img src="../assets/mens/Light-Gafas-de-sol.avif" alt="Squared Sunglasses">
-            <p>Squared Sunglasses</p>
+            <img src="../assets/womens/leggings-Cropped view.avif" alt="Monogram Waistband Leggings">
+            <p>Monogram Waistband Leggings</p>
         </div>
         <div class="highlight-item" data-id="13">
-            <img src="../assets/mens/Light-Mocasn-hombre.avif" alt="Brown Mocasin">
-            <p>Brown Mocasin</p>
+            <img src="../assets/womens/blusa-de-popelin-view.avif" alt="Poplin blouse">
+            <p>Poplin blouse</p>
         </div>
         <div class="highlight-item" data-id="14">
-            <img src="../assets/mens/Light-Pantalon-denim.avif" alt="Denim Jeans">
-            <p>Denim Jeans</p>
+            <img src="../assets/womens/vaqueros-Worn view.avif" alt="Slim-cut jeans">
+            <p>Slim-cut jeans</p>
         </div>
         <div class="highlight-item" data-id="15">
-            <img src="../assets/mens/traje-marron.avif" alt="brown suit">
-            <p>Brown Suit</p>
+            <img src="../assets/womens/gafas-de-sol-Interior view.avif" alt="Cat Eye Sunglasses">
+            <p>Cat Eye Sunglasses</p>
         </div>
         <div class="highlight-item" data-id="16">
-            <img src="../assets/mens/smokin.avif" alt="smokin">
-            <p>Black Smokin</p>
+            <img src="../assets/womens/gafas-de-sol-lmoon-Interior view.avif" alt="Moon Metal Cat Eye">
+            <p>Moon Metal Cat Eye</p>
         </div>
         <div class="highlight-item" data-id="17">
-            <img src="../assets/mens/beige-blazer.avif" alt="Beige Blazer">
-            <p>Beige Blazer</p>
+            <img src="../assets/womens/cartera-capucines-Worn view.avif" alt="Capucines wallet">
+            <p>Capucines wallet</p>
         </div>
         <div class="highlight-item" data-id="18">
-            <img src="../assets/mens/green-scarf.avif" alt="Green Scarf">
-            <p>Green Scarf</p>
+            <img src="../assets/womens/bolso-alma-Worn view.avif" alt="Alma BB bag">
+            <p>Alma BB bag</p>
         </div>
         <div class="highlight-item" data-id="19">
-            <img src="../assets/mens/oasi-lino-shirt.avif" alt="Lino Shirt">
-            <p>Lino Shirt</p>
+            <img src="../assets/womens/sandalia-Front view.avif" alt="Silhouette Sandal">
+            <p>Silhouette Sandal</p>
         </div>
         <div class="highlight-item" data-id="20">
-            <img src="../assets/mens/ochre-polo.avif" alt="Ochre Polo">
-            <p>Ochre Polo</p>
+            <img src="../assets/womens/zapato-Front view.avif" alt="Swing backless court shoe">
+            <p>Swing backless court shoe</p>
         </div>
-        <!-- Agrega más items si quieres -->
+
     </section>
 
     <footer>
-        <div class="footer">
-            <div class="footer-container">
-                <div class="footer-section">
-                    <h4>Contact Us</h4>
-                    <p>Email: info@luxus.com</p>
-                    <p>Phone: (123) 456-7890</p>
-                    <p>Address: 123 Luxury St, Clothing City</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Follow Us</h4>
-                    <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
-                    <a href="https://www.instagram.com" target="_blank"><img src="../assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
-                    <a href="https://www.twitter.com" target="_blank"><img src="../assets/X.png" alt="X" class="social-icon small-social"></a>
-                </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <p><a href="../index.html">Home</a> | <a href="./contact.html">Contact</a> | <a href="./history.html">About Us</a></p>
-                </div>
+      <div class="footer">
+          <div class="footer-container">
+            <div class="footer-section">
+              <h4>Follow Us</h4>
+              <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
+              <a href="https://www.instagram.com" target="_blank"><img src="../assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
+              <a href="https://www.twitter.com" target="_blank"><img src="../assets/X.png" alt="X" class="social-icon small-social"></a>
             </div>
-            <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
-        </div>
-    </footer>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p>Email: info@luxus.com</p>
+                <p>Phone: (123) 456-7890</p>
+                <p>Address: 123 Luxury St, Clothing City</p>
+            </div>
+              <div class="footer-section">
+                  <h4>Quick Links</h4>
+                  <p><a href="../index.html">Home</a> | <a href="./contact.html">Contact</a> | <a href="./history.html">About Us</a></p>
+              </div>
+          </div>
+          <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
+      </div>
+  </footer>
 
     <div id="productModal" class="modal">
         <div class="modal-content">
