[UPDATE] finished signature pages

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
         <h2>A SIGNATURE COLLECTION</h2>
         <div class="signature-grid">
             <div class="signature-item">
-                <a href="./pages/signature.html"><img src="./assets/signature-womens-shoes.jpg" alt="Signature Women's Shoes"></a>
+                <a href="./pages/s-w-shoes.html"><img src="./assets/signature-womens-shoes.jpg" alt="Signature Women's Shoes"></a>
                 <p>Women's Shoes</p>
             </div>
             <div class="signature-item">
-                <a href="./pages/signature.html"><img src="./assets/signature-womens-bags.jpg" alt="Signature Women's Bags"></a>
+                <a href="./pages/s-w-bags.html"><img src="./assets/signature-womens-bags.jpg" alt="Signature Women's Bags"></a>
                 <p>Women's Bags</p>
             </div>
             <div class="signature-item">
-                <a href="./pages/signature.html"><img src="./assets/signature-mens-bags.jpg" alt="Signature Men's Bags"></a>
+                <a href="./pages/s-m-bags.html"><img src="./assets/signature-mens-bags.jpg" alt="Signature Men's Bags"></a>
                 <p>Men's Bags</p>
             </div>
             <div class="signature-item">
-                <a href="./pages/signature.html"><img src="./assets/signature-mens-shoes.jpg" alt="Signature Men's Shoes"></a>
+                <a href="./pages/s-m-shoes.html"><img src="./assets/signature-mens-shoes.jpg" alt="Signature Men's Shoes"></a>
                 <p>Men's Shoes</p>
             </div>
         </div>
@@ -103,7 +103,7 @@
             <p class="footer-bottom">© 2025 Luxus Clothing | Made with ❤️</p>
         </div>
     </footer>
-    
+
     <div id="productModal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
