[UPDATE] fixed header

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <div class="header">
         <div class="header-content">
-          <a href="../index.html">
-            <img src="../assets/logo.png" alt="Luxus Clothing Logo" class="logo">
+          <a href="./index.html">
+            <img src="./assets/logo.png" alt="Luxus Clothing Logo" class="logo">
           </a>
           <div class="header-links">
-            <a href="../pages/men.html">Men's</a>
-            <a href="../pages/women.html">Women's</a>
-            <a href="../pages/signature.html">Signature</a>
+            <a href="./pages/men.html">Men's</a>
+            <a href="./pages/women.html">Women's</a>
+            <a href="./pages/signature.html">Signature</a>
           </div>
           <div class="header-icons">
             <i class="fas fa-search"></i>
