--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             <div class="footer-container">
               <div class="footer-section">
                 <h4>Follow Us</h4>
-                <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
-                <a href="https://www.instagram.com" target="_blank"><img src="../assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
-                <a href="https://www.twitter.com" target="_blank"><img src="../assets/X.png" alt="X" class="social-icon small-social"></a>
+                <a href="https://www.facebook.com" target="_blank"><img src="./assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="./assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="./assets/X.png" alt="X" class="social-icon small-social"></a>
               </div>
               <div class="footer-section">
                   <h4>Contact Us</h4>
