--- a/pages/history.html
+++ b/pages/history.html
@@ -66,6 +66,7 @@
             <a href="https://www.facebook.com" target="_blank"><img src="../assets/facebook.png" alt="Facebook" class="social-icon small-social"></a>
             <a href="https://www.instagram.com" target="_blank"><img src="../assets/instagram.png" alt="Instagram" class="social-icon small-social"></a>
             <a href="https://www.twitter.com" target="_blank"><img src="../assets/X.png" alt="X" class="social-icon small-social"></a>
+            <a href="https://github.com/nmaiguel31/bit-1" target="_blank"><img src="../assets/github.png" alt="X" class="social-icon small-social"></a>
           </div>
           <div class="footer-section">
               <h4>Contact Us</h4>
